# CerebrasCppExample

./: .clang-format  .gitignore  .gitmodules  BENCHMARK_ANALYSIS.md  BENCHMARK_CONVERSION.md  CMakeLists.txt  LICENSE  Makefile  README.md  analyze_benchmark_results.py  benchmark.cpp  convert_all_benchmarks.py  convert_benchmark.py  rest_client.cpp  sample_requests_results.json
datasets/: benchmark_1K.jsonl  benchmark_1K_converted.jsonl  sample_requests.jsonl
